Changelog as of December 5, 2011:
== Version 2.0 ==
* Added additional PHPDoc style documentation
* Added `DMM WP Title` - utilizes the `wp_title` filter to add text to the default title output
* Added `DMM Use Posted` function for posts without titles
* Added minimal doc-block to each file as relevant
* Changed `my_theme_data` to `active_theme_data` to be more descriptive in `BNS Theme Version`
* Re-defined each widget area separately to allow for descriptions to show end-user more details about each area
* Removed 'Home" link code from `dmm_list_pages`
* Removed unused images (from IE6 support)
* Replaced TEMPLATEPATH constant with `get_template_directory_uri`
* Updated documentation to clarify `BNS Dynamic Copyright` parameters

/**
 * Internet Browsers Reviewed
 * ==========================
 *
 * Apple Safari v5.1.1 (Mac)
 * Apple Safari v5.1.1 (PC)
 * Firefox v8.0 (Mac)
 * Firefox v8.0 (PC)
 * Google Chrome v15.0
 * Internet Explorer v9.0
 * Opera v11.52
 */

/** ------------------------------------------------------------------------- */
----

== Version 1.9.1 ==
* added CSS optimizations
* added PHPDoc style documentation
* combined added comment classes `user-ID` and `microid` creation into one function `Add Comment Classes` in 'comments.php'
* corrected comment reply style
* drop direct support for Internet Explorer 6 or order
* modified `.widget h2` CSS to better allow for long titles in the sidebar
* moved "You must be logged in to post a comment." to be more clearly readable
* moved enqueued `comment-reply` call from 'header.php' to 'functions.php'
* removed `get_page_number` function as no longer needed
* removed 'category.php' template file as not used
* reviewed and corrected old changelog entries for spelling and other minor typos
* updated 'readme.txt' (minor changes)

----
-- Version 1.9
  - corrects issues with custom menus and brings forward all other changes added at 1.8.7
  
-- Version 1.8.7.1
  - reversion to 1.8.6.1
  
-- Version 1.8.7